<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>monkey_bt_plugins</name>
  <version>0.0.0</version>
  <description>Behaviour tree package for Arm control</description>
  <maintainer email="monkey@todo.todo">Kean Hao</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>behaviortree_ros2</depend>
  <depend>behaviortree_cpp</depend>
  <depend>btcpp_ros2_interfaces</depend>
  <depend>action_tutorials_interfaces</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>monkey_bt_util</depend>
  <depend>monkey_std_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
